# Universal-Modbus-ImGUI

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md  common.h  main.cpp
CommunicationManager/: CommunicationManager.cpp  CommunicationManager.h
IODevice/: IDevice.h  SerialDevice.cpp  SerialDevice.h
PComm/Include/: PComm.h
Protocols/ModBus/: CMakeLists.txt  ModBus.cpp  ModBus.h  Request.cpp  Request.h  Response.cpp  Response.h
View/: GuiBuilder.cpp  GuiBuilder.h
View/BackgroundWindow/: BackgroundWindow.cpp  BackgroundWindow.h
View/ExchangeWindow/: ExchangeWindow.cpp  ExchangeWindow.h
View/Logger/: Logger.cpp  Logger.h
View/StartUpWindow/: StartUpWindow.cpp  StartUpWindow.h
